--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -57,3 +57,15 @@ section {
 .img-cursor{
   cursor: pointer;
 }
+
+.bg-black{
+  background-color: black;
+}
+
+.no-dec{
+  color: inherit;
+}
+
+.bg-unlvRed{
+  background-color: rgba(177,2,2,.92);
+}
