--- a/css/problemsStyle.css
+++ b/css/problemsStyle.css
@@ -7,6 +7,10 @@
  html, body{
     height: 100%;
     width: 100%;
+    background: linear-gradient(to bottom right, rgb(202, 17, 17), purple);
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
   }
   
   header {
@@ -21,20 +25,6 @@
   
   section {
     padding: 150px 0;
-  }
-  
-  .bg-ourRed{
-    background-image: linear-gradient(to bottom right, rgb(202, 17, 17), purple);
-  
-    /* Full page */
-    height: 100%;
-    width: 100%;
-  
-    /* Center and scale the image nicely */
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: repeat-x;
-    background-size: cover;
   }
   
   .portfolio-item {
