--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -20,11 +20,13 @@ header {
 }
 
 section {
-  padding: 150px 0;
+  padding: 3em 0;
 }
 
 .bg-ourRed{
+/*
   background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url("../img/icpc_fall2018.jpg");
+*/
 
   display: table;
 
@@ -78,3 +80,5 @@ section {
   background-color: #ffc107;
   border-radius: 6px;
 }
+
+
