--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -4,9 +4,10 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-scrolling-nav/blob/master/LICENSE)
  */
 
-html, body{
+html, body {
   height: 100%;
   width: 100%;
+  /* overflow-x: hidden; */
 }
 
 header {
