--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -6,13 +6,13 @@
     position: relative;
     margin: auto;
     width: 100vw;    
-    /* background-color: rgba(0,0,0,1); */
+    background-image: black;
 }
 
 /* Hide the images by default */
 .mySlides {
   display: none;
-  
+  background-image: black;
 }
 
 /* Next & previous buttons */
@@ -68,7 +68,7 @@
   height: 15px;
   width: 15px;
   margin: 0 2px;
-  background-color: #bbb;
+  background-image: black;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
@@ -81,9 +81,9 @@
 /* Fading animation */
 .fadeSlide {
   -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
+  -webkit-animation-duration: .5s;
   animation-name: fade;
-  animation-duration: 1.5s;
+  animation-duration: .5s;
 }
 
 #megatronSlideShow  {
@@ -91,6 +91,7 @@
   padding: 0;
   /* width: 100vw; */
   padding-top: 4.7rem;
+  background-image: black;
   
 }
 
@@ -117,18 +118,13 @@
   text-align: center;
 }
 
-#buttonContainer {
-
-    
-
-}
 
 @-webkit-keyframes fade {
-  from {opacity: .8}
+  from {opacity: .9}
   to {opacity: 1}
 }
 
 @keyframes fade {
-  from {opacity: .8}
+  from {opacity: .9}
   to {opacity: 1}
 }
