--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -78,13 +78,7 @@
   background-color: #717171;
 }
 
-/* Fading animation */
-.fadeSlide {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: .5s;
-  animation-name: fade;
-  animation-duration: .5s;
-}
+
 
 #megatronSlideShow  {
   /* height: fit-content; */
@@ -120,11 +114,20 @@
 
 
 @-webkit-keyframes fade {
-  from {opacity: .9}
+  from {opacity: .8}
   to {opacity: 1}
 }
 
 @keyframes fade {
-  from {opacity: .9}
+  from {opacity: .8}
   to {opacity: 1}
+}
+
+/* Fading animation */
+.fadeSlide {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 2s;
+  animation-name: fade;
+  animation-duration: 2s;
+  animation-timing-function: ease ;
 }
